--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "postbuild": "cp build/index.html build/404.html && git subtree push --prefix build/ origin gh-pages",
+    "postbuild": "cp build/index.html build/404.html && git add build/. && git commit -m \"build\" && git subtree push --prefix build/ origin gh-pages",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
